--- a/client/package.json
+++ b/client/package.json
@@ -7,14 +7,13 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
-    "bootstrap": "5.1.0",
-    "bootstrap5": "^1.1.9",
     "http-proxy-middleware": "^2.0.1",
     "react": "^17.0.2",
-    "react-bootstrap": "^2.0.0-beta.6",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.1",
     "react-scripts": "4.0.3",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^2.0.3",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
